--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^0.1.7",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
