--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.1.7",
+    "nuxt": "^2.0.0"
+  },
+  "devDependencies": {
+    "@nuxt/typescript-build": "^0.2.10",
+    "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.2.3",
-    "nuxt": "^2.0.0",
-    "prettier": "^1.18.2"
-  },
-  "devDependencies": {
-    "@nuxt/typescript-build": "^0.2.10",
-    "@nuxtjs/eslint-config-typescript": "^0.1.3",
+    "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "prettier-eslint-cli": "^5.0.0"
   }
