add node-fetch package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.1.7",
+    "node-fetch": "^2.6.0",
     "nuxt": "^2.0.0",
     "shopify-buy": "^2.7.2"
   },
