--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.1.7",
+    "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "node-fetch": "^2.6.0",
     "nuxt": "^2.0.0",
